--- a/styles/globals.css
+++ b/styles/globals.css
@@ -155,6 +155,8 @@ html {
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.8);
 } */
 
+
+
 /* Responsive */
 @media (max-width: 768px) {
   .hero-with-video .hero-title {
@@ -414,6 +416,7 @@ html {
 
 .social-links {
   display: flex;
+  flex-wrap: wrap;
   gap: 1.5rem;
   justify-content: center;
 }
@@ -483,7 +486,7 @@ html {
   font-size: 0.9rem;
 }
 
-/* Responsive Design */
+/* Responsive hai */
 @media (max-width: 768px) {
   .navbar {
     flex-direction: column;
@@ -534,6 +537,37 @@ html {
 
   .section {
     padding: 3rem 1rem;
+  }
+
+  .navbar-links {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .about-image {
+    object-fit: cover;
+    border-radius: 50%;
+    width: 220px;
+    height: 220px;
+    box-shadow: 0 10px 30px #0003;
+}
+}
+
+@media (max-width: 380px) {
+  .navbar {
+    padding: 0.8rem;
+  }
+
+  .hero-title {
+    font-size: 1.8rem;
+  }
+
+  .hero-subtitle {
+    font-size: 0.8rem;
+  }
+
+  .section {
+    padding: 3rem 0.6rem;
   }
 
   .navbar-links {
